[tool.poetry]
name = "repl_python3_assen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
aiofiles = "^0.7.0"
asyncpg = "^0.23.0"
flask = "^2.0.1"
colour = "^0.1.5"
embed = "^0.1.0"
youtube-dl = "^2021.5.16"
utils = "^1.0.1"
slashcommands = "^0.4"
discord-py-slash-command = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
